2004-09-06  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/main_window.cpp, src/main_window.h: Only show
	the dialog, do not run it.

2004-09-06  Damien Sandras  <dsandras@gnome.org>

	* src/bonobo_component.cpp, src/callbacks.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/gnomemeeting.h, src/lid.cpp, 
	src/main_window.cpp, src/main_window.h, src/misc.cpp, src/misc.h, 
	src/tray.cpp: Added function to get and set the URL in the URL
	bar. Modified GnomeMeeting Connect and Disconnect update the URL
	part of the UI and can be used everywhere else to call somebody,
	answer a call or clear a call.

2004-09-04  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.desktop.in: Applied patch from Stephane Loeuillet.

	* src/addressbook_window.cpp: Added patch from Alessio Dessi.

2004-09-01  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp, 
	src/ils.cpp, src/lid.cpp, src/main_window.cpp, src/main_window.h,
	src/misc.cpp, src/misc.h, src/urlhandler.cpp: More GMObjectification.

2004-08-31  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_events.h, lib/gm_events.c: New files, providing new signals
	for GObject, and an event dispatcher so the endpoint can emit them.
	* lib/gm_events_marshalers.list: New file, providing the marshalers for
	the previous files.
	* lib/Makefile.am: Handle building the previous files.
	* src/main_window.cpp: Make the new signals available.
	* src/endpoint.h, src/endpoint.cpp: Add in the dispatcher, the api to
	register to it, and emit the new signals.

2004-08-31  Damien Sandras  <dsandras@gnome.org>

	* src/sound_handling.cpp: Fixed #151499.

	* src/main_window.cpp: Changed error message so that it talks about
	a missing audio plugin instead of a missing audio manager as people
	are more familiar with the word 'plugin'.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.	                                                                                