@@ -1,3 +1,9 @@
+2004-09-07  Damien Sandras  <dsandras@gnome.org>
+
+	* src/endpoint.cpp, src/endpoint.h, src/main_window.cpp, 
+	src/main_window.h, src/tray.cpp, src/tray.h, src/urlhandler.cpp:
+	More cleanups.
+
 2004-09-06  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoint.cpp, src/main_window.cpp, src/main_window.h: Only show
